@@ -10,5 +10,13 @@ pretty basic ability to have.
     <style>
         html { background-color: black; }
     </style>
+    <link rel="me" id="mastodon-identifier" href="https://mastodon.online/@murdomaclachlan">
+    <meta charset="utf-8">
+    <meta name="author" content="Murdo B. Maclachlan">
+    <meta
+      name="description"
+      content="The home page of Murdo Maclachlan."
+    >
+    <title>Murdo Maclachlan</title>
     <meta http-equiv="refresh" content="0; URL=pages/home" />
 </html>
