@@ -13,6 +13,7 @@
             name="type"
             content="main"
         />
+        <link rel="me" id="mastodon-identifier" href="https://mastodon.online/@murdomaclachlan">
         <title>Murdo Maclachlan | Accounts</title>
 
         <!-- Styling -->
