@@ -9,6 +9,7 @@
           name="description"
           content="The home page of Murdo Maclachlan."
         >
+        <link rel="me" id="mastodon-identifier" href="https://mastodon.online/@murdomaclachlan">
         <title>Murdo Maclachlan | Home</title>
 
         <!-- Styling -->
@@ -24,7 +25,6 @@
             <!-- Header will be inserted here -->
         </div>
         <div id="body-container" class="outer-container">
-            <a id="mastodon-identifier" style="display:none;" rel="me" href="https://mastodon.online/@murdomaclachlan"></a>
             <main class="inner-container">
                 <div class="text-row">
                     <div class="text-column">
