@@ -9,6 +9,7 @@
           name="description"
           content="Murdo Maclachlan's pronouns and other identity aspects."
         >
+        <link rel="me" id="mastodon-identifier" href="https://mastodon.online/@murdomaclachlan">
         <title>Murdo Maclachlan | Identity</title>
 
         <!-- Styling -->
