@@ -9,6 +9,7 @@
           name="description"
           content="The home page of Murdo Maclachlan."
         >
+        <link rel="me" id="mastodon-identifier" href="https://mastodon.online/@murdomaclachlan">
         <title>Murdo Maclachlan | Legal</title>
 
         <!-- Styling -->
