@@ -9,7 +9,7 @@
           name="description"
           content="Links and details relating to Murdo Maclachlan's writing."
         >
-
+        <link rel="me" id="mastodon-identifier" href="https://mastodon.online/@murdomaclachlan">
         <title>Murdo Maclachlan | Writing</title>
 
         <!-- Styling -->
