@@ -10,6 +10,7 @@
           content="Excerpts of poetry by Murdo Maclachlan."
         >
         <meta id="prefix" content="../">
+        <link rel="me" id="mastodon-identifier" href="https://mastodon.online/@murdomaclachlan">
         <title>Murdo Maclachlan | Poetry</title>
 
         <!-- Styling -->
